--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,8 @@
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="@+id/textViewEmail"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toTopOf="@+id/textViewEmail" />
+        app:layout_constraintTop_toTopOf="@+id/textViewEmail"
+        android:autofillHints="emailAddress" />
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -77,7 +78,8 @@
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/textViewPassword"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toTopOf="@+id/textViewPassword" />
+        app:layout_constraintTop_toTopOf="@+id/textViewPassword"
+        android:autofillHints="password" />
 
 
 
@@ -101,7 +103,8 @@
         android:text="@string/register_page"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+        android:focusable="true" />
 
 
 
