--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -64,6 +64,11 @@
         android:id="@+id/nav_post"
         android:name="my.edu.tarc.quickhire.ui.SearchandPost.PostingFragment"
         android:label="@string/title_post" />
+    <fragment
+        android:id="@+id/nav_organization_home"
+        android:name="my.edu.tarc.quickhire.ui.home.OrganizationHomeFragment"
+        android:label="fragment_organization_home"
+        tools:layout="@layout/fragment_organization_home" />
 
 
 </navigation>
