--- a/app/src/main/res/layout/recycler_notification.xml
+++ b/app/src/main/res/layout/recycler_notification.xml
@@ -41,7 +41,7 @@
             android:layout_width="80dp"
             android:layout_height="30dp"
             android:id="@+id/recPriority"
-            android:text="priority"
+            android:text="Time"
             android:layout_toEndOf="@id/recTitle"
             android:layout_marginTop="20dp"
             android:layout_marginStart="90dp"
@@ -60,6 +60,20 @@
             android:layout_marginStart="20dp"
             android:maxLines="1"
             android:layout_marginBottom="12dp"/>
+
+        <TextView
+            android:id="@+id/recType"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recTitle"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="12dp"
+            android:layout_toEndOf="@+id/recDesc"
+            android:maxLines="1"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
