--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,13 +10,24 @@
         android:id="@+id/nav_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard" />
+
+<!--    <item-->
+<!--        android:id="@+id/nav_notification"-->
+<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
+<!--        android:title="@string/title_notifications" />-->
+
+<!--    <item-->
+<!--        android:id="@+id/nav_profile"-->
+<!--        android:icon="@drawable/baseline_person_24"-->
+<!--        android:title="@string/title_profile" />-->
+
     <item
-        android:id="@+id/nav_notification"
+        android:id="@+id/nav_notificationOrganization"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
     <item
-        android:id="@+id/nav_profile"
+        android:id="@+id/nav_profileOrganization"
         android:icon="@drawable/baseline_person_24"
         android:title="@string/title_profile" />
 
