--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -31,6 +31,18 @@
         android:layout_below="@id/search"
         />
 
+    <Button
+        android:id="@+id/test"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="95dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="500dp"
+        android:layout_marginStart="80dp"
+        android:text="@string/apply"
+        android:textColor="@color/green"
+
+        />
+
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
