--- a/app/src/main/res/layout/fragment_notification_detail2.xml
+++ b/app/src/main/res/layout/fragment_notification_detail2.xml
@@ -29,8 +29,8 @@
         android:layout_marginBottom="12dp"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         android:id="@+id/detailImage"
         android:padding="8dp"
         android:layout_gravity="center"
