--- a/app/src/main/res/layout/recycler_notification.xml
+++ b/app/src/main/res/layout/recycler_notification.xml
@@ -28,7 +28,7 @@
 
 
         <TextView
-            android:layout_width="120dp"
+            android:layout_width="200dp"
             android:layout_height="30dp"
             android:id="@+id/recTitle"
             android:text="Title"
@@ -44,12 +44,12 @@
             android:text="Time"
             android:layout_toEndOf="@id/recTitle"
             android:layout_marginTop="20dp"
-            android:layout_marginStart="90dp"
+            android:layout_marginStart="10dp"
             android:textAlignment="center"
             android:textColor="@color/lavender"
             android:textSize="16sp"/>
         <TextView
-            android:layout_width="140dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:id="@+id/recDesc"
             android:text="desc"
@@ -63,7 +63,21 @@
 
         <TextView
             android:id="@+id/recType"
-            android:layout_width="140dp"
+            android:layout_width="14dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recTitle"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="12dp"
+            android:layout_toEndOf="@+id/recDesc"
+            android:maxLines="1"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/recUID"
+            android:layout_width="14dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/recTitle"
             android:layout_marginStart="22dp"
