--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,25 +11,25 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard" />
 
-<!--    <item-->
-<!--        android:id="@+id/nav_notification"-->
-<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
-<!--        android:title="@string/title_notifications" />-->
-
-<!--    <item-->
-<!--        android:id="@+id/nav_profile"-->
-<!--        android:icon="@drawable/baseline_person_24"-->
-<!--        android:title="@string/title_profile" />-->
-
     <item
-        android:id="@+id/nav_notificationOrganization"
+        android:id="@+id/nav_notification"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
     <item
-        android:id="@+id/nav_profileOrganization"
+        android:id="@+id/nav_profile"
         android:icon="@drawable/baseline_person_24"
         android:title="@string/title_profile" />
+
+<!--    <item-->
+<!--        android:id="@+id/nav_notificationOrganization"-->
+<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
+<!--        android:title="@string/title_notifications" />-->
+
+<!--    <item-->
+<!--        android:id="@+id/nav_profileOrganization"-->
+<!--        android:icon="@drawable/baseline_person_24"-->
+<!--        android:title="@string/title_profile" />-->
 
     <item
         android:id="@+id/nav_search"
