--- a/app/src/main/res/layout/recycler_employer_job.xml
+++ b/app/src/main/res/layout/recycler_employer_job.xml
@@ -39,25 +39,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobName"
+            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
             app:layout_constraintTop_toBottomOf="@+id/employerJobName" />
 
         <TextView
             android:id="@+id/employerJobSpecialist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
             android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobDescription"
+            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
             app:layout_constraintTop_toBottomOf="@+id/employerJobDescription" />
+
+        <TextView
+            android:id="@+id/employerJobArea"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/textview"
+            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
+            app:layout_constraintTop_toBottomOf="@+id/employerJobSpecialist" />
 
         <TextView
             android:id="@+id/employerJobPayRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobSpecialist"
-            app:layout_constraintTop_toBottomOf="@+id/employerJobSpecialist" />
+            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
+            app:layout_constraintTop_toBottomOf="@+id/employerJobArea" />
 
         <Button
             android:id="@+id/button"
@@ -69,5 +76,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/employerJobImage" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
