--- a/app/src/main/res/layout/recycler_employer_job.xml
+++ b/app/src/main/res/layout/recycler_employer_job.xml
@@ -36,46 +36,25 @@
 
         <TextView
             android:id="@+id/employerJobDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="292dp"
+            android:layout_height="56dp"
             android:text="@string/textview"
             app:layout_constraintStart_toStartOf="@+id/employerJobImage"
             app:layout_constraintTop_toBottomOf="@+id/employerJobName" />
-
-        <TextView
-            android:id="@+id/employerJobSpecialist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
-            app:layout_constraintTop_toBottomOf="@+id/employerJobDescription" />
-
-        <TextView
-            android:id="@+id/employerJobArea"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
-            app:layout_constraintTop_toBottomOf="@+id/employerJobSpecialist" />
-
-        <TextView
-            android:id="@+id/employerJobPayRate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
-            app:layout_constraintTop_toBottomOf="@+id/employerJobArea" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/apply"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/employerJobDescription"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/employerJobImage" />
+            app:layout_constraintStart_toEndOf="@+id/employerJobDescription"
+            app:layout_constraintTop_toTopOf="@+id/employerJobDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
