--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,10 +16,10 @@
 <!--        android:icon="@drawable/ic_notifications_black_24dp"-->
 <!--        android:title="@string/title_notifications" />-->
 
-<!--    <item-->
-<!--        android:id="@+id/nav_notification"-->
-<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
-<!--        android:title="@string/title_notifications" />-->
+    <item
+        android:id="@+id/nav_notification"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_notifications" />
 
     <item
         android:id="@+id/nav_profile"
