--- a/app/src/main/res/layout/fragment_register_page3.xml
+++ b/app/src/main/res/layout/fragment_register_page3.xml
@@ -125,7 +125,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/editTextOrgConfirmPass" />
 
             <EditText
-                android:id="@+id/editTextPhoneOrg"
+                android:id="@+id/editTextOrgPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_marginTop="40dp"
@@ -144,7 +144,7 @@
                 android:layout_marginEnd="16dp"
                 android:text="@string/register"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextPhoneOrg" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextOrgPhone" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
