--- a/app/src/main/res/layout/fragment_posting.xml
+++ b/app/src/main/res/layout/fragment_posting.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Post a Job"
+            android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -23,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/upload_image"
+            android:textColor="#3C3A3A"
             android:textSize="20sp" />
 
         <FrameLayout
@@ -58,13 +60,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/job_name"
+                android:textColor="#3C3A3A"
                 android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/etJobName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTintMode="add"
                 android:hint="Job Name"
+                android:inputType="textLongMessage"
+                android:textColorHint="#B3ACAC"
                 android:textSize="20sp" />
         </LinearLayout>
 
@@ -79,13 +85,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/job_des"
+                android:textColor="#3C3A3A"
                 android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/etJobDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTintMode="add"
                 android:hint="Job Description"
+                android:inputType="textLongMessage"
+                android:textColorHint="#B3ACAC"
                 android:textSize="20sp" />
         </LinearLayout>
 
@@ -100,14 +110,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/job_specialist"
+                android:textColor="#3C3A3A"
                 android:textSize="20sp" />
 
             <Spinner
                 android:id="@+id/jobspinner"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@color/white"
-                android:backgroundTint="@color/tabBackgroundColor"
+                android:background="#FDFDFD"
+                android:backgroundTint="#B1AEAE"
                 android:entries="@array/joboptions"
                 tools:ignore="TouchTargetSizeCheck" />
 
@@ -123,6 +134,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/areacity"
+                android:textColor="#3C3A3A"
                 android:textSize="20sp" />
 
             <Spinner
@@ -130,7 +142,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/white"
-                android:backgroundTint="@color/tabBackgroundColor"
+                android:backgroundTint="#B0ADAD"
                 android:entries="@array/areaoptions"
                 tools:ignore="TouchTargetSizeCheck" />
 
@@ -147,13 +159,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/job_payrate"
+                android:textColor="#3C3A3A"
                 android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/etJobPayRate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTintMode="add"
                 android:hint="Job Pay Rate"
+                android:inputType="number"
+                android:textColorHint="#B3ACAC"
                 android:textSize="20sp" />
         </LinearLayout>
 
