--- a/app/src/main/res/layout/recycler_employer_job.xml
+++ b/app/src/main/res/layout/recycler_employer_job.xml
@@ -16,14 +16,17 @@
         <ImageView
             android:id="@+id/employerJobImage"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/todo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
@@ -31,7 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
+            app:layout_constraintBottom_toTopOf="@+id/employerJobDescription"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/employerJobImage" />
 
         <TextView
@@ -39,7 +43,7 @@
             android:layout_width="292dp"
             android:layout_height="56dp"
             android:text="@string/textview"
-            app:layout_constraintStart_toStartOf="@+id/employerJobImage"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/employerJobName" />
 
         <Button
